--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							</li>
 							<li>
 								<a target="_blank"
-									href="https://www.google.com/search?q=d&client=avast-a-1&sxsrf=ALiCzsYGgBXT-AdJdcDo8A_0PX4KzCEx8A%3A1665035878614&ei=Zm4-Y4aLJaaIxc8PnvewYA&ved=0ahUKEwiG1tSA9sr6AhUmRPEDHZ47DAwQ4dUDCA4&uact=5&oq=d&gs_lcp=Cgdnd3Mtd2l6EANKBAhBGABKBAhGGABQAFgAYLYBaABwAHgAgAEAiAEAkgEAmAEAoAEBwAEB&sclient=gws-wiz">google D	</li>
+									href="https://www.google.com/search?q=d&client=avast-a-1&sxsrf=ALiCzsYGgBXT-AdJdcDo8A_0PX4KzCEx8A%3A1665035878614&ei=Zm4-Y4aLJaaIxc8PnvewYA&ved=0ahUKEwiG1tSA9sr6AhUmRPEDHZ47DAwQ4dUDCA4&uact=5&oq=d&gs_lcp=Cgdnd3Mtd2l6EANKBAhBGABKBAhGGABQAFgAYLYBaABwAHgAgAEAiAEAkgEAmAEAoAEBwAEB&sclient=gws-wiz">google D	</a></li>
 						</ul>
 					</li>
 					<li>
